--- a/index.html
+++ b/index.html
@@ -14,7 +14,51 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1></h1>
+    <nav class="main__nav">
+      <div class="wrapper">
+        <h2 class="logo"><a href="./index.html">My Website</a></h2>
+        <ul>
+          <li><a href="#" class="current">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+
+    <section class="hero">
+      <div class="wrapper">
+        <h1>Welcome to My Website</h1>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi
+          explicabo voluptates veniam?
+        </p>
+      </div>
+    </section>
+
+    <section class="wrapper content">
+      <h2>Content One</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates,
+        molestias vero. Sint expedita quibusdam saepe, hic fugiat, pariatur ad
+        temporibus mollitia nisi quis nostrum? Veritatis neque adipisci quia
+        veniam hic perferendis nostrum natus aliquam, consequatur dolor
+        assumenda dignissimos nisi animi. Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. Aliquid harum, veniam inventore mollitia aspernatur
+        ullam recusandae iusto, atque ratione ad soluta, laboriosam repellendus
+        minima fugit! Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+        Cumque minus alias fugiat.
+      </p>
+
+      <h3>Content Two</h3>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore
+        earum aperiam eligendi dolorem obcaecati asperiores, illum nisi nulla.
+        Dolorum aliquam vero odio numquam. Iusto atque dolorum minus tempore
+        quod distinctio dolores ipsa ipsam eum consequatur nobis ea non,
+        possimus reiciendis.
+      </p>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
