--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h1>Welcome to My Website</h1>
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi
-          explicabo voluptates veniam?
+          explicabo
         </p>
       </div>
     </section>
